data/derived/sp14/progs/unify/prog3607.ml.out
Characters 136-138:
  | Average (n1, n2) ->  "(" ^ n1 ^ n2 ^ "/ 2 )"
                               ^^
Error: This expression has type expr but an expression was expected of type
         string
